fixed navigation alignment

--- a/custom-style.css
+++ b/custom-style.css
@@ -98,7 +98,7 @@ ul{
 
 .nav-links {
     marggin-left: 10px;
-    padding: 5px;
+    padding: 9px;
     margin-top: 10px;
     background-color: rgba(63,77,101,.4);
 }
